docs: enhance ledger settings API documentation :books:
